# mps-proj-polynomial

./: .gitignore  Cargo.toml  as_bytes.py  openocd.cfg
docs/: report.md
src/: display_buffer.rs  io.rs  main.rs  polynomial_2nd_degree.rs  polynomial_2nd_order.rs  rtc_source.rs
