[package]
authors = ["krzysdz <krzysdz@users.noreply.github.com>"]
edition = "2021"
readme = "README.md"
name = "mps-proj-polynomial"
version = "0.1.0"

[features]
# analytical solution requires sqrt, which is not available in core, use libm
# https://github.com/rust-lang/rfcs/issues/2505
analytical = ["num/libm"]
rust-gpio = []
set-date = []

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
panic-semihosting = { version = "0.5.6", optional = true }
panic-itm = { version = "0.4.2", optional = true }
embedded-sdmmc = "0.3.0"
embedded-hal = "0.2.6"
static_assertions = "1.1.0"
cfg-if = "1.0"

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Reexported as stm32f1xx_hal::pac
# [dependencies.stm32f1]
# features = ["stm32f107", "rt"]
# version = "0.14.0"

[dependencies.stm32f1xx-hal]
version = "0.8.0"
features = ["rt", "stm32f107"]

[dependencies.num]
version = "0.4"
default-features = false

[dependencies.chrono]
version = "0.4"
default-features = false

# this lets you use `cargo fix`!
[[bin]]
name = "mps-proj-polynomial"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
